--- a/document-repository/package.json
+++ b/document-repository/package.json
@@ -14,9 +14,9 @@
     "@langchain/core": "^0.3.57",
     "@langchain/langgraph": "^0.3.0",
     "@langchain/openai": "^0.5.11",
+    "@napi-rs/canvas": "^0.1.44",
     "@supabase/ssr": "^0.6.1",
     "@supabase/supabase-js": "^2.49.10",
-    "canvas": "^3.1.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "dotenv": "^16.5.0",
