--- a/document-repository/package.json
+++ b/document-repository/package.json
@@ -14,7 +14,7 @@
     "@langchain/core": "^0.3.57",
     "@langchain/langgraph": "^0.3.0",
     "@langchain/openai": "^0.5.11",
-    "@napi-rs/canvas": "^0.1.44",
+    "@napi-rs/canvas": "^0.1.71",
     "@supabase/ssr": "^0.6.1",
     "@supabase/supabase-js": "^2.49.10",
     "class-variance-authority": "^0.7.1",
@@ -44,6 +44,7 @@
     "@types/uuid": "^10.0.0",
     "eslint": "^9",
     "eslint-config-next": "15.3.3",
+    "node-loader": "^2.1.0",
     "tailwindcss": "^4",
     "tw-animate-css": "^1.3.4",
     "typescript": "^5",
